--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
               </oj-bind-for-each>
             </ul>
           </div>
-          <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-secondary-color oj-text-sm">
+          <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-color-secondary oj-typography-body-sm">
             Copyright © 2014, 2020 Oracle and/or its affiliates All rights reserved.
           </div>
         </footer>
